--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "ai-hub"
-version = "0.4.0"
+version = "0.1.0"
 description = "AI Hub lets you chat with powerful AI models like Ollama for real-time assistance, content generation, and productivity tools—all in one place"
-authors = ["you"]
+authors = ["aj-seven"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -22,6 +22,8 @@ serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 tauri = { version = "2", features = ["devtools"] }
 tauri-plugin-opener = "2"
+reqwest = { version = "0.10", features = ["blocking", "json"] }
+json = "0.12.4"
 
 [features]
 # by default Tauri runs in production mode
