--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Set output
         id: vars
         run: echo "tag=${GITHUB_REF#refs/*/}" >> $GITHUB_OUTPUT
@@ -23,7 +24,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 20.x
+          node-version: 20
 
       - name: Generate changelog
         id: create_release
@@ -36,27 +37,34 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-22.04, windows-latest]
+        platform: [macos-latest, ubuntu-24.04, windows-latest]
 
     runs-on: ${{ matrix.platform }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-        with:
-          version: latest
 
-      - name: install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-22.04'
+      - name: Setup Node.js (npm only)
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: "npm"
+
+      - name: Install dependencies (Ubuntu only)
+        if: startsWith(matrix.platform, 'ubuntu')
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libjavascriptcoregtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y \
+            libgtk-3-dev \
+            libwebkit2gtk-4.1-dev \
+            libjavascriptcoregtk-4.1-dev \
+            libayatana-appindicator3-dev \
+            librsvg2-dev
 
-      - name: install dependencies (mac only)
+      - name: Install dependencies (mac only)
         if: matrix.platform == 'macos-latest'
-        run: |
-          rustup target add aarch64-apple-darwin
+        run: rustup target add aarch64-apple-darwin
 
       - name: Install Rust stable
         uses: dtolnay/rust-toolchain@stable
@@ -65,12 +73,6 @@ jobs:
         uses: swatinem/rust-cache@v2
         with:
           workspaces: "./src-tauri -> target"
-
-      - name: Sync node version and setup cache
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
-          cache: "npm"
 
       - name: Install app dependencies and build web
         run: npm install
@@ -82,8 +84,8 @@ jobs:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ""
         with:
-          tagName: ${{ github.ref_name }}
-          releaseName: AI-Hub_Desktop ${{ needs.create-release.outputs.APP_VERSION }}
+          tagName: ${{ needs.create-release.outputs.tag }}
+          releaseName: "🚀 AI-Hub Desktop ${{ needs.create-release.outputs.tag }}"
           releaseBody: ""
           releaseDraft: true
           prerelease: false
