--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.9.0",
-    "@tauri-apps/plugin-opener": "^2.5.0",
-    "next": "^15.5.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
@@ -25,14 +20,20 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@tauri-apps/api": "^2.9.0",
+    "@tauri-apps/plugin-opener": "^2.5.0",
+    "@vercel/analytics": "^1.6.1",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.522.0",
     "nanoid": "^5.1.5",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "openai": "^5.6.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1",
     "remark-emoji": "^5.0.1",
@@ -51,15 +52,15 @@
     "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.0.2",
     "eslint": "^9.31.0",
     "eslint-config-next": "^15.5.2",
     "jsdom": "^26.1.0",
     "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.3.4",
     "typescript": "~5.9.2",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.4",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "tw-animate-css": "^1.3.4"
+    "vitest": "^3.2.4"
   }
 }
