--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@langchain/anthropic": "^1.3.17",
+    "@langchain/cohere": "^1.0.2",
+    "@langchain/core": "^1.1.24",
+    "@langchain/google-genai": "^2.1.18",
+    "@langchain/openai": "^1.2.7",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.9",
@@ -27,6 +33,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "langchain": "^1.2.24",
     "lucide-react": "^0.522.0",
     "nanoid": "^5.1.5",
     "next": "^15.5.9",
@@ -35,10 +42,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^16.1.0",
     "remark-emoji": "^5.0.1",
     "sonner": "^2.0.5",
-    "tailwind": "^4.0.0",
+    "tailwind": "^2.3.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2"
   },
